Version 0.4.0
-------------
* Added auto parsing style. This first tries to use Google, but falls back on
  freeform if no google-style doctests are found.
* Errors are no longer printed twice if only a single test is being run.
* All parsers now default to the new "auto" style.
* Added command "dump" to native runner that reformats enabled doctests so they
  can be run as unit tests.

Version 0.3.5
-------------
* Changed development status to Beta
* Output difference now strips the BLANKLINE marker if enabled

Version 0.3.4
-------------
* The reported difference between got and want now preserves newlines for
  better visibility.

Version 0.3.3
-------------
* Fixed bug where pytest would collect all tests twice 
  (because the __init__.py file was normalized to a directory in package_modpaths)

Version 0.3.2
-------------
* API update to facilitate mkinit

Version 0.3.1
-------------
* Improved doctest syntax error message
* PythonPathContext no longer breaks if small changes to the path occur in its context.
* PythonPathContext can now insert into front or back of sys.path
* Flags can now be specified before or after positional arguments when using the __main__ script

Version 0.3.0
-------------
* Can now override sys.path when calling modname_to_modpath and is_modname_importable (api change)
* Added entry point script
* example command lines now use the full path if the module is not in the PYTHONPATH

Version 0.2.4
-------------
* added IGNORE_WANT directive
* added separator between printout of docsrc and its stdout

Version 0.2.3
-------------
* Print correct doctest line number in the traceback
* Runner on_error will now default to return instead of raise

Version 0.2.2
-------------
* Fixed option parsing bug in __main__ script


Version 0.2.1
-------------
* The default runtime state can be customized with the `--xdoc-options` command line argument.
* Fix crash when trying to read binary files
* Fix issue in _docstr_line_workaround


Version 0.2.0